--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   },
   "keywords": [],
   "author": "Fabian Ordonez",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies":{
+    "express": "4.16.4",
+    "mysql": "2.16.0",
+    "body-parser": "1.18.3",
+    "db-migrate": "0.11.3",
+    "db-migrate-mysql": "1.1.10",
+    "morgan": "1.9.1"
+  }
 }
